# estrutura_de_projeto

./: README.md  mkdocs.yml  pyproject.toml
.github/workflow/: CI.yml
app/: main.py
app/pipeline/: extract.py  load.py  transform.py
data/input/: absenteeism_data_0.xlsx  absenteeism_data_1.xlsx  absenteeism_data_10.xlsx  absenteeism_data_11.xlsx  absenteeism_data_12.xlsx  absenteeism_data_13.xlsx  absenteeism_data_14.xlsx  absenteeism_data_15.xlsx  absenteeism_data_16.xlsx  absenteeism_data_17.xlsx  absenteeism_data_18.xlsx  absenteeism_data_19.xlsx  absenteeism_data_2.xlsx  absenteeism_data_20.xlsx  absenteeism_data_21.xlsx  absenteeism_data_22.xlsx  absenteeism_data_23.xlsx  absenteeism_data_24.xlsx  absenteeism_data_25.xlsx  absenteeism_data_26.xlsx  absenteeism_data_27.xlsx  absenteeism_data_28.xlsx  absenteeism_data_29.xlsx  absenteeism_data_3.xlsx  absenteeism_data_30.xlsx  absenteeism_data_31.xlsx  absenteeism_data_32.xlsx  absenteeism_data_33.xlsx  absenteeism_data_34.xlsx  absenteeism_data_35.xlsx  absenteeism_data_36.xlsx  absenteeism_data_37.xlsx  absenteeism_data_38.xlsx  absenteeism_data_39.xlsx  absenteeism_data_4.xlsx  absenteeism_data_40.xlsx  absenteeism_data_41.xlsx  absenteeism_data_42.xlsx  absenteeism_data_43.xlsx  absenteeism_data_44.xlsx  (+10 more)
data/output/: concatenated_data.xlsx
docs/: index.md
tests/: test_pipeline.py
