[tool.poetry]
name = "estrutura-de-projeto"
version = "0.1.0"
description = ""
authors = ["heitor.felix <heitor.felix@sapiensia.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
