[tool.poetry]
name = "estrutura-de-projeto"
version = "0.1.0"
description = ""
authors = ["heitor.felix <heitor.felix@sapiensia.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
openpyxl = "^3.1.5"
pytest = "^8.3.2"
isort = "^5.13.2"
blue = "^0.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.taskipy.tasks]
format = """
isort .
black .
"""
kill = "kill -9 $(lsof -t -i :8000)"
test = "pytest -v"
run = """
python3 app/main.py
"""
doc = "mkdocs serve"